test/fail/basic_syntax/reject_userland_scoop.lily
#[
SyntaxError: Expected 'a label', not 'an integer'.
    from reject_userland_scoop.lily:6:
]#

define test: 0 {}
